tests/miniJava/neg/004363_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public length java ( ) { return 0 ; } }
